crates/biome_cli/tests/snapshots/main_cases_linter_groups_plain/disable_all_rules_when_group_is_off.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test1.jsx
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "a11y": "off"
    }
  }
}
```

## `test1.jsx`

```jsx
<img src="foo.png" />

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
