crates/biome_cli/tests/snapshots/main_cases_linter_groups_plain/enables_all_rules_when_group_is_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test1.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "style": "error"
    }
  }
}
```

## `test1.js`

```js
export default function f() {}

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test1.js:1:8 lint/style/noDefaultExport ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Avoid default exports.
  
  > 1 │ export default function f() {}
      │        ^^^^^^^
    2 │ 
  
  i Default exports cannot be easily discovered inside an editor and don't encourage the use of consistent names through a code base.
  
  i Use a named export instead.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
