crates/biome_cli/tests/snapshots/main_cases_linter_groups_plain/group_enable_does_not_enable_domain_rules.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint test1.jsx
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": false,
      "correctness": "error"
    }
  }
}
```

## `test1.jsx`

```jsx
import { useEffect, useState } from "react";

export function Component() {
    const [local, setLocal] = useState(0);

    useEffect(() => {
        console.log(local);
    }, []);

    return <button onClick={() => setLocal(1)}>increment</button>;
}

```

# Emitted Messages

```block
biome.json:2:15 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    1 │ {
  > 2 │     "linter": {
      │               ^
  > 3 │         "rules": {
  > 4 │             "recommended": false,
  > 5 │             "correctness": "error"
  > 6 │         }
  > 7 │     }
      │     ^
    8 │ }
    9 │ 
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
```
